--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<h1>montar en bicicleta es bueno para el coraz&Oacute;n</h1>	
-	   <h2>condiciÓn&Oacute;</h2>
+	   <h2>condici&Oacute;n</h2>
 	   <h3>juegos</h3>
 	   <h4>actividades</h4>
 
