--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
 		<link rel="stylesheet" href="css/estilos.css">
 	</head>
 	<body>
+		<blockquote cite="http://www.montar_en_bicicletaessano.org/TR/html401/">
+			<p class="pa1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamcolaboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</blockquote>
+		<!-- fgfghfghgf -->
+		<!--gfghghgghgh-->
+		<pre>etiqueta de preformateado
+			Edades      Mujeres     Hombres
+			< 18            4          5
+			>18 y < 25      6          5
+			>25 y < 35      8          10
+		</pre>
 		<h1>montar en bicicleta es bueno para el coraz&Oacute;n</h1>	
+		<p class="pa2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	   <h2>condici&Oacute;n</h2>
 	   <h3>juegos</h3>
 	   <h4>actividades</h4>
